--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <body>
   <div class="container-fluid">
     <header class="header py-3 d-flex justify-content-between align-items-center">
-      <h1 class="text-center flex-grow-1"><span>PX4 Drone Control Pro</span></h1>
+      <h1 class="text-center flex-grow-1"><span>FALCON X 2025</span></h1>
       <button id="themeToggle" class="btn btn-sm btn-outline-light"><i class="fas fa-moon"></i></button>
     </header>
 
