--- a/index.html
+++ b/index.html
@@ -4,29 +4,105 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FALCON X 2025</title>
+
+  <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
   <style>
-    body { background-color: #111; color: #fff; font-family: "Poppins", sans-serif; }
-    .header { background: linear-gradient(90deg, #ff7b00, #ff9e00); border-bottom: 4px solid #ff9e00; box-shadow: 0 3px 15px rgba(255, 165, 0, 0.4); }
-    .header h1 { font-weight: 800; font-size: 2rem; color: white; text-shadow: -2px -2px 0 #ff7b00, 2px -2px 0 #ff7b00, -2px 2px 0 #ff7b00, 2px 2px 0 #ff7b00, 0 0 12px rgba(255, 140, 0, 0.8); letter-spacing: 1px; text-align: center; }
-    h1 span { display: inline-block; padding: 5px 15px; border: 3px solid #fff; border-radius: 10px; background: rgba(0, 0, 0, 0.3); box-shadow: 0 0 10px #ff7b00; }
-    .card { background-color: #1b1b1b; color: white; border: 2px solid #ff7b00; border-radius: 15px; }
-    .card-header { font-weight: 600; background-color: #ff7b00 !important; color: black !important; border-bottom: 2px solid #ff9e00; }
+    body {
+      background-color: #111;
+      color: #fff;
+      font-family: "Poppins", sans-serif;
+    }
+    .header {
+      background: linear-gradient(90deg, #ff7b00, #ff9e00);
+      border-bottom: 4px solid #ff9e00;
+      box-shadow: 0 3px 15px rgba(255, 165, 0, 0.4);
+    }
+    .header h1 {
+      font-weight: 800;
+      font-size: 2rem;
+      color: white;
+      text-shadow:
+        -2px -2px 0 #ff7b00,
+        2px -2px 0 #ff7b00,
+        -2px 2px 0 #ff7b00,
+        2px 2px 0 #ff7b00,
+        0 0 12px rgba(255, 140, 0, 0.8);
+      letter-spacing: 1px;
+      text-align: center;
+    }
+    h1 span {
+      display: inline-block;
+      padding: 5px 15px;
+      border: 3px solid #fff;
+      border-radius: 10px;
+      background: rgba(0, 0, 0, 0.3);
+      box-shadow: 0 0 10px #ff7b00;
+    }
+
+    .card {
+      background-color: #1b1b1b;
+      color: white;
+      border: 2px solid #ff7b00;
+      border-radius: 15px;
+    }
+    .card-header {
+      font-weight: 600;
+      background-color: #ff7b00 !important;
+      color: black !important;
+      border-bottom: 2px solid #ff9e00;
+    }
+
     .btn-primary { background-color: #ff7b00; border: none; color: black; }
     .btn-primary:hover { background-color: #ff9e00; color: black; }
     .btn-success { background-color: #00c853; border: none; }
     .btn-success:hover { background-color: #00e676; }
     .btn-danger { background-color: #d62828; }
     .btn-warning { background-color: #ffa600; color: black; }
-    #map { border: 3px solid #ff7b00; border-radius: 10px; height: 500px; z-index: 1; }
-    .hourglass { font-size: 48px; color: #ffae00; animation: blink 1s infinite; }
-    @keyframes blink { 0%,100%{opacity:1;transform:scale(1);} 50%{opacity:0.5;transform:scale(1.1);} }
-    #droneIcon { width: 60px; transform-origin: center; transition: transform 0.2s linear; }
-    #aiResult img { width: 100%; border-radius: 10px; margin-top: 10px; border: 2px solid #ff7b00; }
-    #aiLoading { color: #ffae00; animation: blink 1s infinite; }
-    .data-box { margin-top: 10px; background: rgba(255,255,255,0.1); border-radius: 10px; padding: 10px; font-size: 0.9rem; }
+
+    #map {
+      border: 3px solid #ff7b00;
+      border-radius: 10px;
+      height: 500px;
+      z-index: 1;
+    }
+
+    .animate-fade-in {
+      animation: fadeIn 1s ease-in-out;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    #droneIcon {
+      width: 60px;
+      transform-origin: center;
+      transition: transform 0.2s linear;
+    }
+
+    .hourglass {
+      font-size: 48px;
+      color: #ffae00;
+      animation: blink 1s infinite;
+    }
+    @keyframes blink {
+      0%, 100% { opacity: 1; transform: scale(1); }
+      50% { opacity: 0.5; transform: scale(1.1); }
+    }
+
+    #aiResult img {
+      width: 100%;
+      border-radius: 10px;
+      margin-top: 10px;
+      border: 2px solid #ff7b00;
+    }
+    #aiLoading {
+      color: #ffae00;
+      animation: blink 1s infinite;
+    }
   </style>
 </head>
 
@@ -39,8 +115,8 @@
 
     <div class="row">
       <!-- Sidebar trái -->
-      <div class="col-md-2">
-        <div class="card shadow-lg mb-3">
+      <div class="col-md-2 sidebar-left">
+        <div class="card shadow-lg mb-3 animate-fade-in">
           <div class="card-header"><i class="fas fa-gamepad me-2"></i>Điều Khiển</div>
           <div class="card-body">
             <p>Roll: <span id="rollValue">0°</span></p>
@@ -56,7 +132,7 @@
 
       <!-- Bản đồ -->
       <div class="col-md-7">
-        <div class="card shadow-lg mb-3">
+        <div class="card shadow-lg mb-3 animate-fade-in">
           <div class="card-header"><i class="fas fa-map-marked-alt me-2"></i>Bản đồ nhiệm vụ</div>
           <div id="map"></div>
           <div class="card-footer text-center">
@@ -67,110 +143,111 @@
       </div>
 
       <!-- Sidebar phải -->
-      <div class="col-md-3">
-        <div class="card shadow-lg mb-3">
+      <div class="col-md-3 sidebar-right">
+        <!-- Drone Status -->
+        <div class="card shadow-lg mb-3 animate-fade-in">
           <div class="card-header"><i class="fas fa-satellite me-2"></i>Trạng thái Drone</div>
           <div class="card-body text-center">
             <div id="droneWaitIcon"><i class="fas fa-hourglass-half hourglass"></i></div>
-            <img id="droneIcon" src="https://cdn-icons-png.flaticon.com/512/2922/2922561.png" style="display:none;">
+            <img id="droneIcon" src="https://cdn-icons-png.flaticon.com/512/2922/2922561.png" style="display: none;" />
             <p class="mt-2" id="droneStatus">Đang chờ lệnh...</p>
           </div>
         </div>
 
-        <!-- AI YOLO -->
-        <div class="card shadow-lg mb-3">
-          <div class="card-header"><i class="fas fa-brain me-2"></i>AI Phân Tích Khí Hậu</div>
+        <!-- AI + Video Stream -->
+        <div class="card shadow-lg mb-3 animate-fade-in">
+          <div class="card-header"><i class="fas fa-video me-2"></i>Video + AI Phân Tích</div>
           <div class="card-body text-center">
-            <input type="file" id="aiInput" class="form-control mb-2" accept="image/*">
-            <button id="sendAI" class="btn btn-primary w-100 mb-2"><i class="fas fa-paper-plane me-2"></i>Gửi đến AI</button>
+            <img id="liveStream" src="http://YOUR_PI_IP:5000/video_feed" 
+                 class="img-fluid rounded mb-2" 
+                 alt="Video Drone Stream">
+
+            <button id="refreshAI" class="btn btn-primary w-100 mb-2">
+              <i class="fas fa-sync me-2"></i>Cập nhật Phân tích AI
+            </button>
             <div id="aiLoading" style="display:none;">⏳ Đang phân tích...</div>
             <div id="aiResult" class="text-start"></div>
-
-            <div class="data-box">
-              <p><b>🌡️ Nhiệt độ:</b> <span id="temp">--</span>°C</p>
-              <p><b>💧 Độ ẩm:</b> <span id="hum">--</span>%</p>
-              <p><b>🧠 Dự đoán AI:</b> <span id="label">--</span></p>
-              <p><b>🕒 Cập nhật:</b> <span id="time">--</span></p>
-              <img id="liveImage" src="https://via.placeholder.com/250x150?text=Drone+Feed" class="mt-2 w-100 rounded">
-            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-<script>
-  const map = L.map("map").setView([10.762622, 106.660172], 13);
-  L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", { maxZoom: 19 }).addTo(map);
-  let waypoints = [], droneAngle = 0, droneFlying = false;
-  const droneIconEl = document.getElementById("droneIcon"), droneWaitIcon = document.getElementById("droneWaitIcon");
+  <!-- JS -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script>
+    // === BẢN ĐỒ ===
+    const map = L.map("map").setView([10.762622, 106.660172], 13);
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", { maxZoom: 19 }).addTo(map);
 
-  map.on("click", e => {
-    const lat = e.latlng.lat.toFixed(6), lng = e.latlng.lng.toFixed(6);
-    const alt = prompt("Nhập độ cao bay (m):", "10");
-    if (alt !== null) {
-      L.marker([lat, lng]).addTo(map)
-       .bindPopup(`<b>Waypoint</b><br>Lat: ${lat}<br>Lng: ${lng}<br>Alt: ${alt}m`).openPopup();
-      waypoints.push({ lat, lng, alt });
-    }
-  });
+    let waypoints = [];
+    let droneIconEl = document.getElementById("droneIcon");
+    let droneWaitIcon = document.getElementById("droneWaitIcon");
+    let droneAngle = 0;
+    let droneFlying = false;
 
-  document.getElementById("clearWaypoints").onclick = () => {
-    waypoints = []; map.eachLayer(l => { if (l instanceof L.Marker) map.removeLayer(l); });
-  };
+    map.on("click", function (e) {
+      const lat = e.latlng.lat.toFixed(6);
+      const lng = e.latlng.lng.toFixed(6);
+      const alt = prompt("Nhập độ cao bay (m):", "10");
+      if (alt !== null) {
+        const marker = L.marker([lat, lng]).addTo(map)
+          .bindPopup(`<b>Waypoint</b><br>Lat: ${lat}<br>Lng: ${lng}<br>Alt: ${alt}m`).openPopup();
+        waypoints.push({ lat, lng, alt });
+      }
+    });
 
-  function simulateDroneMotion() {
-    if (!droneFlying) return;
-    droneAngle += 10;
-    const roll = Math.sin(Date.now()/300)*20, pitch = Math.cos(Date.now()/400)*15;
-    droneIconEl.style.transform = `rotate(${droneAngle}deg) skew(${roll}deg, ${pitch}deg)`;
-    document.getElementById("rollValue").innerText = roll.toFixed(1)+"°";
-    document.getElementById("pitchValue").innerText = pitch.toFixed(1)+"°";
-    document.getElementById("yawValue").innerText = droneAngle.toFixed(1)+"°";
-    requestAnimationFrame(simulateDroneMotion);
-  }
-
-  document.getElementById("startMission").onclick = () => {
-    if (waypoints.length===0) return alert("Chưa có waypoint nào!");
-    document.getElementById("droneStatus").innerText = "Đang thực hiện mission...";
-    droneWaitIcon.style.display="none"; droneIconEl.style.display="inline";
-    droneFlying = true; simulateDroneMotion();
-  };
-
-  // === AI YOLO Manual Upload ===
-  const API_URL = "https://jadiel-sleuthlike-yadira.ngrok-free.dev/predict";
-  document.getElementById("sendAI").onclick = async () => {
-    const file = document.getElementById("aiInput").files[0];
-    if (!file) return alert("Vui lòng chọn ảnh!");
-    document.getElementById("aiLoading").style.display="block";
-    document.getElementById("aiResult").innerHTML="";
-    const reader = new FileReader();
-    reader.onload = async () => {
-      const base64 = reader.result.split(",")[1];
-      const res = await fetch(API_URL, { method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({ image: base64 }) });
-      const data = await res.json();
-      document.getElementById("aiLoading").style.display="none";
-      document.getElementById("aiResult").innerHTML = `<b>Kết quả AI:</b><br><pre>${JSON.stringify(data,null,2)}</pre>` + (data.image?`<img src="data:image/jpeg;base64,${data.image}" />`:"");
+    document.getElementById("clearWaypoints").onclick = () => {
+      waypoints = [];
+      map.eachLayer((layer) => {
+        if (layer instanceof L.Marker) map.removeLayer(layer);
+      });
     };
-    reader.readAsDataURL(file);
-  };
 
-  // === 🛰️ NHẬN ẢNH & DỮ LIỆU TỰ ĐỘNG TỪ DRONE ===
-  const DRONE_API = "https://jadiel-sleuthlike-yadira.ngrok-free.dev/result.json"; // Flask / Raspberry server
-  async function updateDroneFeed(){
-    try {
-      const res = await fetch(DRONE_API + "?t=" + new Date().getTime());
-      const data = await res.json();
-      document.getElementById("temp").innerText = data.temperature || "--";
-      document.getElementById("hum").innerText = data.humidity || "--";
-      document.getElementById("label").innerText = data.label || "--";
-      document.getElementById("liveImage").src = data.image_url || "https://via.placeholder.com/250x150?text=Drone+Feed";
-      document.getElementById("time").innerText = new Date().toLocaleTimeString();
-    } catch (e){ console.log("Không thể cập nhật dữ liệu:", e); }
-  }
-  setInterval(updateDroneFeed, 5000);
-  updateDroneFeed();
-</script>
+    function simulateDroneMotion() {
+      if (!droneFlying) return;
+      droneAngle += 10;
+      const roll = Math.sin(Date.now() / 300) * 20;
+      const pitch = Math.cos(Date.now() / 400) * 15;
+      droneIconEl.style.transform = `rotate(${droneAngle}deg) skew(${roll}deg, ${pitch}deg)`;
+      document.getElementById("rollValue").innerText = roll.toFixed(1) + "°";
+      document.getElementById("pitchValue").innerText = pitch.toFixed(1) + "°";
+      document.getElementById("yawValue").innerText = droneAngle.toFixed(1) + "°";
+      requestAnimationFrame(simulateDroneMotion);
+    }
+
+    document.getElementById("startMission").onclick = () => {
+      if (waypoints.length === 0) {
+        alert("Chưa có waypoint nào!");
+        return;
+      }
+      document.getElementById("droneStatus").innerText = "Đang thực hiện mission...";
+      droneWaitIcon.style.display = "none";
+      droneIconEl.style.display = "inline";
+      droneFlying = true;
+      simulateDroneMotion();
+      alert("Mission bắt đầu với " + waypoints.length + " waypoint!");
+    };
+
+    // === AI YOLO PHÂN TÍCH ẢNH ===
+    const API_URL = "https://YOUR_AI_SERVER.ngrok-free.app/predict"; // Flask AI server URL
+
+    document.getElementById("refreshAI").onclick = async () => {
+      document.getElementById("aiLoading").style.display = "block";
+      document.getElementById("aiResult").innerHTML = "";
+
+      try {
+        const res = await fetch(API_URL);
+        const data = await res.json();
+        document.getElementById("aiLoading").style.display = "none";
+        document.getElementById("aiResult").innerHTML =
+          `<b>Kết quả AI:</b><br><pre>${JSON.stringify(data.result, null, 2)}</pre>` +
+          (data.image ? `<img src="data:image/jpeg;base64,${data.image}" />` : "");
+      } catch (err) {
+        document.getElementById("aiLoading").style.display = "none";
+        document.getElementById("aiResult").innerText = "❌ Lỗi kết nối đến AI server!";
+      }
+    };
+  </script>
 </body>
 </html>
