--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <button class="gift-btn" type="button">Kính tặng Thầy</button>
 
         <div class="meta-left">
-          <div class="subtitle">Thầy – Giáo viên</div>
+          <div class="subtitle">Thầy Hồ Chí Công – Giáo viên ban giám thị</div>
           <div>Ngày Nhà giáo Việt Nam 20-11</div>
         </div>
       </div>
@@ -198,7 +198,7 @@
       <div class="right">
         <div>
           <div class="title">Lời chúc 20-10 từ lớp A16 (2024-2027)</div>
-          <div class="subtitle">Kính gửi thầy Hồ Chí Công – Xin thay mặt lớp 11A16, chúng em xin gửi đến thầy lời chúc chân thành nhất</div>
+          <div class="subtitle">Kính gửi thầy – Xin thay mặt lớp 11A16, chúng em xin gửi đến thầy lời chúc chân thành nhất</div>
         </div>
 
         <div class="message-wrap">
