--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
         <div class="message-wrap">
           <div class="message" role="article" aria-label="Nội dung lời chúc">
             <p>
-              Nhân ngày 20/11, em xin gửi đến cô lời cảm ơn chân thành nhất. Chúc cô luôn xinh đẹp, dịu dàng, tràn đầy năng lượng và tình yêu với nghề. Cảm ơn cô vì những kiến thức, sự quan tâm và yêu thương đã dành cho chúng em. Mong cô luôn rạng rỡ như những đóa hoa trên bục giảng!
-            </p>
+              Kính chúc thầy luôn giữ mãi phong độ, tinh thần nhiệt huyết và nụ cười vui vẻ mỗi ngày. Cảm ơn thầy vì những bài học quý giá và sự tận tâm, nghiêm khắc mà thầy dành cho chúng em. Chúc thầy luôn mạnh khỏe, thành công và hạnh phúc trong cuộc sống!
             <div class="signature">-A16-</div>
           </div>
         </div>
