--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <!-- Cột phải: tiêu đề + nội dung -->
       <div class="right">
         <div>
-          <div class="title">Lời chúc 20-10 từ lớp A16 (2024-2027)</div>
+          <div class="title">Lời chúc 20-1111 từ lớp A16 (2024-2027)🌞</div>
           <div class="subtitle">Kính gửi thầy – Xin thay mặt lớp 11A16, chúng em xin gửi đến thầy lời chúc chân thành nhất</div>
         </div>
 
