--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@ body{
       <button class="gift-btn">Kính tặng Thầy</button>
 
       <div class="meta-left">
-        <div class="subtitle">Thầy – Giáo viên</div>
+        <div class="subtitle">Thầy Hồ Chí Công – Giáo viên ban giám thị</div>
         <div>Ngày Nhà giáo Việt Nam 20-11</div>
       </div>
     </div>
 
     <!-- Cột phải -->
     <div class="right">
-      <div class="title">Lời chúc 20-10 từ lớp A16 (2024-2027)</div>
+      <div class="title">Lời chúc 20-11 từ lớp A16 (2024-2027)</div>
       <div class="subtitle">Kính gửi thầy – Xin thay mặt lớp 11A16, chúng em xin gửi đến thầy lời chúc chân thành nhất</div>
 
       <div class="message">
@@ -191,7 +191,7 @@ body{
       </div>
 
       <div class="footer-row">
-        <div class="date-chip">20-10</div>
+        <div class="date-chip">20-11</div>
         <div class="school">Trường THPT Trần Khai Nguyên - Thành Phố Hồ Chí Minh</div>
       </div>
 
