--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ body{
       <button class="gift-btn">Kính tặng Thầy</button>
 
       <div class="meta-left">
-        <div class="subtitle">Thầy Hồ Chí Công – Giáo viên ban giám thị</div>
+        <div class="subtitle">Thầy Hồ Chí Công – Giáo viên giám thị</div>
         <div>Ngày Nhà giáo Việt Nam 20-11</div>
       </div>
     </div>
